2015-10-06  Georg-Johann Lay <avr@gjlay.de>

	patch #8728: Use __extension__ with long long
	* include/stdio.h: Use __extension__ when using long long.

2015-10-06  Joern Rennecke <joern.rennecke@embecosm.com>

	patch #8564: Add dwarf debug info alternative, build printf with debug info
	* configure.ac (--enable-debug-info=): Add dwarf alternative.
	* libc/stdio/Rules.am (PRINTF_CFLAGS): Add @CDEBUG@.

2015-10-06  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	patch #8731: Header file for atmega644a
	* include/avr/io.h: include new header iom644a.h for ATmega644A.
	* include/avr/Makefile.am (avr_HEADERS): add iom644a.h.
	* include/avr/iom644a.h: New file. 

2015-08-20  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	patch #8718: Enable EEPROM memory map only for devices with 
	EEPROM Data Memory Mapping Enable bit (EEMAPEN)
	* libc/misc/eerd_byte.S (eeprom_read_byte): Enable EEPROM map
	only when NVM_EEMAPEN_bm is defined.
	* libc/misc/eerd_block.S (eeprom_read_block): Likewise.
	* libc/misc/eewr_byte.S (eeprom_write_byte): Likewise.
	* libc/misc/readme_eeprom.txt: Update comments for default EEPROM map.

2015-08-17  Praveen Kumar Kaushik
            Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	patch #8716: Enable setjmp/longjmp functions for AVR_TINY architecture
	* include/setjmp.h (_JBLEN): Update for AVR_TINY arch conditionally.
	* libc/stdlib/setjmp.S: Enable setjmp and longjmp for AVR_TINY
	(setjmp, longjmp): Update call-saved registers for AVR_TINY

2015-08-06  Morten Engelhardt Olsen <Morten_engelhardt.Olsen@atmel.com>

	Fix typos and incorrect defines in header files.
	* include/avr/io90pwm216.h: corrted typo in comment.
	* include/avr/iousbxx6_7.h: Add ADHSM bit definition to ADCSRB.
	* include/avr/iom165a.h: Remove BODSE and BODS.
	* include/avr/io2323.h: Move sleep mode definitions to correct place.
	* include/avr/io90pwm316.h: corrected typo in comment.
	(PIM1): Add pin definitions.